--- a/style.css
+++ b/style.css
@@ -120,17 +120,87 @@ section p{
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.64);
+    background-color: rgba(0, 0, 0, 0.767);
+    display: none;
 }
 .authentification{
-    background-color: red;
+    background-color: rgba(253, 253, 253, 0.88);
     width: 600px;
     position: absolute;
-    top: 10vh;
-    left: 28vw;
-    z-index: 2;
-
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 80vh;
+    color: #778dc5;
+    display: none;
+    transition: all 1s ease;
+}
+.authentification form{
+    margin-top: 60px;
 }
 .authentification h2{
     text-align: center;
+    font-family: 'geologica';
+    font-size: 17px;
+    margin-bottom: 15px;
+}
+
+.authentification form label{
+    display: inline-block;
+    width: 150px;
+    margin-top: 30px;
+    font-family: 'geologica';
+    font-size: 13px;
+    margin-left: 110px;
+}
+.authentification form input{
+    height: 30px;
+    border: none;
+    width:200px;
+}
+.authentification button
+{
+    display: block;
+    margin: auto;
+    margin-top: 50px;
+    background-color: #778dc5af;
+    border: none;
+    color: #f3dfb4;
+}
+.authentification img{
+    float: right;
+    height: 30px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+.authentification form button{
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    font-family: 'geologica';
+    font-size: 13px;
+}
+.authentification button[type="button"]{
+    width: 130px;
+    height: 30px;
+    border-radius: 10px;
+    margin-top: 40px;
+}
+.authentification a{
+    color: #f3dfb4;
+    text-decoration: none;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    padding-top: 8px;
+    font-family: 'geologica';
+    font-size: 13px;
+}
+.authentification p{
+    text-align: center;
+    font-family: 'geologica';
+    font-size: 15px;
+    margin-top: 50px;
 }
